Description css finalized, createbuild page margins fixed, comment and description has word wrap now, navbar isnt as weird now, login page margins adjusted

--- a/Client/src/css/buildpage.css
+++ b/Client/src/css/buildpage.css
@@ -182,7 +182,7 @@
   align-items: flex-start;
   flex-wrap: wrap;
   gap: 0px 36px;
-  margin: -10px 20px 0px -10px;
+  margin: -10px 20px 40px 50px;
   padding: 20px 20px 20px 40px;
   font-size: 10px;
 }
@@ -200,6 +200,74 @@
   font-weight: 400;
 }
 
+.buildpage-description-container::-webkit-scrollbar {
+  width: 10px;
+}
+
+.buildpage-description-container::-webkit-scrollbar-track {
+  background: #3b3e86;
+}
+
+.buildpage-description-container::-webkit-scrollbar-thumb {
+  background: rgb(167, 179, 255);
+}
+
+.buildpage-description-container::-webkit-scrollbar-thumb:hover {
+  background: rgb(156, 138, 255);
+}
+
+.buildpage-description-container::-webkit-scrollbar {
+  width: 10px;
+}
+
+.buildpage-description-container::-webkit-scrollbar-track {
+  background: #3b3e86;
+}
+
+.buildpage-description-container::-webkit-scrollbar-thumb {
+  background: rgb(167, 179, 255);
+}
+
+.buildpage-description-container::-webkit-scrollbar-thumb:hover {
+  background: rgb(156, 138, 255);
+}
+
+.buildpage-description-container {
+  border: 0px solid;
+  border-radius: 10px;
+  background-color: #2a1d52;
+  width: 40%;
+  height: 170px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  display: inline-block;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  word-wrap: break-word;
+  gap: 0px 36px;
+  margin: -10px 20px 40px 50px;
+  padding: 2px 20px 20px 40px;
+  font-size: 10px;
+}
+
+.buildpage-description-container h2 {
+  margin: -28px 40px 10px 20px;
+  color: white;
+  font-weight: 620;
+}
+
+.buildpage-description-container .team-gr {
+  font-size: 14px;
+  margin: -28px 0px 10px 120px;
+  color: rgb(109, 109, 109);
+  font-weight: 400;
+}
+
+.buildpage-description-container p {
+  font-size: 14px;
+  align-self: flex-start;
+}
 .divider {
   width: 100%;
   border: solid;
@@ -209,15 +277,14 @@
 }
 
 .like-button {
-  font-size: 20px;
   margin-left: auto;
   margin-bottom: -50px;
-  margin-right: 10px;
+  margin-right: 50px;
   transform: translateY(-180px);
   color: rgb(255, 255, 255);
-  background: #a5ada8;
-  width: 80px;
-  height: 40px;
+  background: #3b3838;
+  width: 70px;
+  height: 30px;
   border-radius: 50%;
   padding: 20px 0px;
   display: flex;
@@ -226,31 +293,18 @@
 }
 
 .like-button:hover {
-  font-size: 20px;
-  margin-left: auto;
-  margin-bottom: -50px;
-  transform: translateY(-180px);
-  color: rgb(255, 255, 255);
-  background: #babebc;
-  width: 80px;
-  height: 40px;
-  border-radius: 50%;
-  padding: 20px 0px;
-  display: flex;
-  align-items: center;
-  text-align: center;
+  box-shadow: inset 10px 30px 30px #413f3f;
   cursor: pointer;
 }
 .like-button-liked {
-  font-size: 20px;
   margin-left: auto;
   margin-bottom: -50px;
-  margin-right: 10px;
+  margin-right: 50px;
   transform: translateY(-180px);
   color: rgb(255, 255, 255);
-  background: #11b44d;
-  width: 80px;
-  height: 40px;
+  background: #3b3838;
+  width: 70px;
+  height: 30px;
   border-radius: 50%;
   padding: 20px 0px;
   display: flex;
@@ -259,26 +313,13 @@
 }
 
 .like-button-liked:hover {
-  font-size: 20px;
-  margin-left: auto;
-  margin-bottom: -50px;
-  transform: translateY(-180px);
-  color: rgb(255, 255, 255);
-  background: #0ccc62;
-  width: 80px;
-  height: 40px;
-  border-radius: 50%;
-  padding: 20px 0px;
-  display: flex;
-  align-items: center;
-  text-align: center;
+  box-shadow: inset 10px 30px 30px #413f3f;
   cursor: pointer;
 }
 
 .like-count {
   color: white;
-
-  transform: translate(-10px, -164px);
+  transform: translate(-50px, -170px);
 }
 .buildpage-likes-text {
   font-size: 15px;
@@ -301,10 +342,6 @@
 .break-inner-menu {
   flex-basis: 100%;
   height: 0px;
-}
-
-.buildpage-description-container {
-  width: 44%;
 }
 .buildpage-description {
   border: 0px solid;
@@ -399,13 +436,45 @@
     align-items: flex-start;
     flex-wrap: wrap;
     gap: 0px 36px;
-    margin: -10px 20px 0px -26px;
+    margin: -10px 20px 0px 50px;
     padding: 20px 20px 20px 40px;
     font-size: 10px;
   }
   .buildpage-description-container {
-    width: 40%;
+    border: 0px solid;
+    border-radius: 10px;
+    background-color: #2a1d52;
+    width: 35%;
+    height: 170px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    display: inline;
+    flex-wrap: wrap;
+    word-wrap: break-word;
+    gap: 0px 36px;
+    margin: -10px 20px 40px 50px;
+    padding: 2px 20px 20px 40px;
+    font-size: 10px;
   }
+
+  .buildpage-description-container h2 {
+    margin: -28px 40px 10px 20px;
+    color: white;
+    font-weight: 620;
+  }
+
+  .buildpage-description-container .team-gr {
+    font-size: 14px;
+    margin: -28px 0px 10px 120px;
+    color: rgb(109, 109, 109);
+    font-weight: 400;
+  }
+
+  .buildpage-description-container p {
+    font-size: 14px;
+    align-self: flex-start;
+  }
+
   .buildpage-description {
     border: 0px solid;
     border-radius: 10px;
@@ -448,7 +517,7 @@
     align-items: flex-start;
     flex-wrap: wrap;
     gap: 0px 36px;
-    margin: -40px 20px 40px 50px;
+    margin: -10px 20px 40px 50px;
     padding: 20px 20px 20px 40px;
     font-size: 10px;
   }
@@ -503,7 +572,7 @@
     font-size: 10px;
   }
   .buildpage-description-container {
-    width: 78%;
+    width: 70%;
   }
   .buildpage-description {
     border: 0px solid;
@@ -536,6 +605,9 @@
 }
 
 @media only screen and (max-width: 850px) {
+  .like-button {
+    display: none;
+  }
   .weapon-container .weapon-gr {
     display: none;
   }
